[gd_scene load_steps=34 format=3 uid="uid://d0e2fba0vddn8"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_3huah"]
[ext_resource type="Texture2D" uid="uid://blhjvr7e7425j" path="res://assets/graphics/characters/enemy_character/enemy_character_idle/enemy_character_idle1.png" id="2_cod55"]
[ext_resource type="Texture2D" uid="uid://o4ixefhd1k33" path="res://assets/graphics/characters/enemy_character/enemy_character_idle/enemy_character_idle2.png" id="3_bcgid"]
[ext_resource type="Texture2D" uid="uid://bgs5srbdcl21c" path="res://assets/graphics/characters/enemy_character/enemy_character_idle/enemy_character_idle3.png" id="4_rjsju"]
[ext_resource type="Texture2D" uid="uid://b8wannfw1qdk2" path="res://assets/graphics/characters/enemy_character/enemy_character_idle/enemy_character_idle4.png" id="5_3yse3"]
[ext_resource type="Texture2D" uid="uid://cumybkd7y2dq8" path="res://assets/graphics/characters/enemy_character/enemy_character_idle/enemy_character_idle5.png" id="6_ctmxq"]
[ext_resource type="Texture2D" uid="uid://cogy5y1h1avtc" path="res://assets/graphics/characters/enemy_character/enemy_character_idle/enemy_character_idle6.png" id="7_fv2cx"]
[ext_resource type="Texture2D" uid="uid://lkdghhwfw0ii" path="res://assets/graphics/characters/enemy_character/enemy_character_idle/enemy_character_idle7.png" id="8_ycdhi"]
[ext_resource type="Texture2D" uid="uid://c66cwlpc0h44p" path="res://assets/graphics/characters/enemy_character/enemy_character_idle/enemy_character_idle8.png" id="9_kgb5t"]
[ext_resource type="Texture2D" uid="uid://bnumkgothj1ie" path="res://assets/graphics/characters/enemy_character/enemy_character_idle/enemy_character_idle9.png" id="10_a1u0s"]
[ext_resource type="Texture2D" uid="uid://ubkhk6xrc8os" path="res://assets/graphics/characters/enemy_character/enemy_character_idle/enemy_character_idle10.png" id="11_1xpna"]
[ext_resource type="Texture2D" uid="uid://bo3up48b84glv" path="res://assets/graphics/characters/enemy_character/enemy_character_idle/enemy_character_idle11.png" id="12_0015r"]
[ext_resource type="Texture2D" uid="uid://bagvgb7cr64pr" path="res://assets/graphics/characters/enemy_character/enemy_character_idle/enemy_character_idle12.png" id="13_f45ji"]
[ext_resource type="Texture2D" uid="uid://c08hpkyjyoms1" path="res://assets/graphics/characters/enemy_character/enemy_character_idle/enemy_character_idle13.png" id="14_qs7n1"]
[ext_resource type="Texture2D" uid="uid://c54vmvro6eenq" path="res://assets/graphics/characters/enemy_character/enemy_character_idle/enemy_character_idle14.png" id="15_hrmt3"]
[ext_resource type="Texture2D" uid="uid://da2btex2536by" path="res://assets/graphics/characters/enemy_character/enemy_character_idle/enemy_character_idle15.png" id="16_gdfnl"]
[ext_resource type="Texture2D" uid="uid://cd0ablqgb35va" path="res://assets/graphics/characters/enemy_character/enemy_character_idle/enemy_character_idle16.png" id="17_g1q7w"]
[ext_resource type="Texture2D" uid="uid://bc426k6rov7qx" path="res://assets/graphics/characters/enemy_character/enemy_char_walk/enemy_character0.png" id="18_ovbqf"]
[ext_resource type="Texture2D" uid="uid://dei7xu022ltus" path="res://assets/graphics/characters/enemy_character/enemy_char_walk/enemy_character1.png" id="19_skih8"]
[ext_resource type="Texture2D" uid="uid://ch5alh5sm1env" path="res://assets/graphics/characters/enemy_character/enemy_char_walk/enemy_character2.png" id="20_mlrh3"]
[ext_resource type="Texture2D" uid="uid://y3whcxpvd1vf" path="res://assets/graphics/characters/enemy_character/enemy_char_walk/enemy_character3.png" id="21_bd30w"]
[ext_resource type="Texture2D" uid="uid://d4jogkodvk5im" path="res://assets/graphics/characters/enemy_character/enemy_char_walk/enemy_character4.png" id="22_bo7pl"]
[ext_resource type="Texture2D" uid="uid://c7xm4kjsrfvvl" path="res://assets/graphics/characters/enemy_character/enemy_char_walk/enemy_character5.png" id="23_lykj5"]
[ext_resource type="Texture2D" uid="uid://ct7kklfgkhyfs" path="res://assets/graphics/characters/enemy_character/enemy_char_walk/enemy_character6.png" id="24_aq2f0"]
[ext_resource type="Texture2D" uid="uid://d1mxb12dakkel" path="res://assets/graphics/characters/enemy_character/enemy_char_walk/enemy_character9.png" id="25_upaos"]
[ext_resource type="Texture2D" uid="uid://vutkvj5enwwt" path="res://assets/graphics/characters/enemy_character/enemy_char_walk/enemy_character7.png" id="26_11vxr"]
[ext_resource type="Texture2D" uid="uid://d041iajq5lp0o" path="res://assets/graphics/characters/enemy_character/enemy_char_walk/enemy_character8.png" id="27_fji0n"]
[ext_resource type="Texture2D" uid="uid://17kwqvh8x2wx" path="res://assets/graphics/characters/enemy_character/enemy_char_walk/enemy_character10.png" id="28_fp86y"]
[ext_resource type="Texture2D" uid="uid://iy4j6ha26q7j" path="res://assets/graphics/characters/enemy_character/enemy_char_walk/enemy_character11.png" id="29_ggucb"]

[sub_resource type="SpriteFrames" id="SpriteFrames_yqlmn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_cod55")
}, {
"duration": 1.0,
"texture": ExtResource("3_bcgid")
}, {
"duration": 1.0,
"texture": ExtResource("4_rjsju")
}, {
"duration": 1.0,
"texture": ExtResource("5_3yse3")
}, {
"duration": 1.0,
"texture": ExtResource("6_ctmxq")
}, {
"duration": 1.0,
"texture": ExtResource("7_fv2cx")
}, {
"duration": 1.0,
"texture": ExtResource("8_ycdhi")
}, {
"duration": 1.0,
"texture": ExtResource("9_kgb5t")
}, {
"duration": 1.0,
"texture": ExtResource("10_a1u0s")
}, {
"duration": 1.0,
"texture": ExtResource("11_1xpna")
}, {
"duration": 1.0,
"texture": ExtResource("12_0015r")
}, {
"duration": 1.0,
"texture": ExtResource("13_f45ji")
}, {
"duration": 1.0,
"texture": ExtResource("14_qs7n1")
}, {
"duration": 1.0,
"texture": ExtResource("15_hrmt3")
}, {
"duration": 1.0,
"texture": ExtResource("16_gdfnl")
}, {
"duration": 1.0,
"texture": ExtResource("17_g1q7w")
}],
"loop": true,
"name": &"idle_enemy_character",
"speed": 25.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("18_ovbqf")
}, {
"duration": 1.0,
"texture": ExtResource("19_skih8")
}, {
"duration": 1.0,
"texture": ExtResource("20_mlrh3")
}, {
"duration": 1.0,
"texture": ExtResource("21_bd30w")
}, {
"duration": 1.0,
"texture": ExtResource("22_bo7pl")
}, {
"duration": 1.0,
"texture": ExtResource("23_lykj5")
}, {
"duration": 1.0,
"texture": ExtResource("24_aq2f0")
}, {
"duration": 1.0,
"texture": ExtResource("25_upaos")
}, {
"duration": 1.0,
"texture": ExtResource("26_11vxr")
}, {
"duration": 1.0,
"texture": ExtResource("27_fji0n")
}, {
"duration": 1.0,
"texture": ExtResource("28_fp86y")
}, {
"duration": 1.0,
"texture": ExtResource("29_ggucb")
}],
"loop": true,
"name": &"wakl_enemy_character",
"speed": 25.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_x0tgt"]
radius = 100.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rig1h"]
radius = 23.0
height = 48.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_siwkh"]
height = 48.0

[node name="floor_enemy" type="CharacterBody2D"]
visibility_layer = 3
script = ExtResource("1_3huah")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.7, 0.7)
sprite_frames = SubResource("SpriteFrames_yqlmn")
animation = &"idle_enemy_character"
frame_progress = 0.293636

[node name="Area2D_detection_area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_detection_area"]
shape = SubResource("CircleShape2D_x0tgt")

[node name="Area2DHitbox" type="Area2D" parent="."]

[node name="CollisionShape2DDamageZone" type="CollisionShape2D" parent="Area2DHitbox"]
shape = SubResource("CapsuleShape2D_rig1h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_siwkh")

[node name="TimerTakeDamageCooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="LabelEnemyHelthBar" type="Label" parent="."]
offset_left = -20.0
offset_top = -41.0
offset_right = 20.0
offset_bottom = -18.0

[connection signal="body_entered" from="Area2D_detection_area" to="." method="_on_area_2d_detection_area_body_entered"]
[connection signal="body_exited" from="Area2D_detection_area" to="." method="_on_area_2d_detection_area_body_exited"]
[connection signal="body_entered" from="Area2DHitbox" to="." method="_on_area_2d_hitbox_body_entered"]
[connection signal="body_exited" from="Area2DHitbox" to="." method="_on_area_2d_hitbox_body_exited"]
[connection signal="timeout" from="TimerTakeDamageCooldown" to="." method="_on_timer_take_damage_cooldown_timeout"]
